package edu.unam.integrador.model;

public enum TipoPago {
    TARJETA_CREDITO,
    TARJETA_DEBITO,
    TRANSFERENCIA_BANCARIA
}
