package edu.unam.integrador.model;

public class Usuario {

}
