@startuml iteracion1_VentaProductosLinea

' Enumeraciones
enum TipoPago {
    TARJETA_CREDITO
    TARJETA_DEBITO
    TRANSFERENCIA_BANCARIA
}

' Interfaces para patrones Observer y Strategy
interface EstrategiaPago {
    +pagar(monto: double): void
}

interface Observador {
    +actualizar(pedido: Pedido): void
}

interface Sujeto {
    +registrarObservador(observador: Observador): void
    +eliminarObservador(observador: Observador): void
    +notificarObservadores(): void
}

' Clases abstractas
abstract class Usuario {
    -id: Long
    -nombre: String
    -correo: String
    +getId(): Long
    +getNombre(): String
    +getCorreo(): String
}

' Clases concretas de Usuario
class Cliente extends Usuario {
    +agregarProductoAlCarrito(producto: Producto): void
    +eliminarProductoDelCarrito(producto: Producto): void
    +realizarCompra(): void
}

class Administrador extends Usuario {
    +agregarProducto(producto: Producto): void
    +actualizarProducto(producto: Producto): void
    +eliminarProducto(producto: Producto): void
}

' Clase Producto
class Producto {
    -id: Long
    -nombre: String
    -descripcion: String
    -precio: double
    -stock: int
    +getId(): Long
    +getNombre(): String
    +getDescripcion(): String
    +getPrecio(): double
    +getStock(): int
    +setStock(stock: int): void
}

' Clase Pedido (implementa Sujeto del patrón Observer)
class Pedido implements Sujeto {
    -id: Long
    -productos: List<Producto>
    -precioTotal: double
    -observadores: List<Observador>
    +getId(): Long
    +getProductos(): List<Producto>
    +getPrecioTotal(): double
    +agregarProducto(producto: Producto): void
    +eliminarProducto(producto: Producto): void
    +calcularPrecioTotal(): void
    +registrarObservador(observador: Observador): void
    +eliminarObservador(observador: Observador): void
    +notificarObservadores(): void
}

' Implementación del Observador (NotificacionCorreo)
class NotificacionCorreo implements Observador {
    +actualizar(pedido: Pedido): void
}

' Contexto y estrategias de pago (patrón Strategy)
class ContextoPago {
    -estrategia: EstrategiaPago
    +setEstrategiaPago(estrategia: EstrategiaPago): void
    +pagar(monto: double): void
}

class PagoTarjetaCredito implements EstrategiaPago {
    +pagar(monto: double): void
}

class PagoTarjetaDebito implements EstrategiaPago {
    +pagar(monto: double): void
}

class PagoTransferenciaBancaria implements EstrategiaPago {
    +pagar(monto: double): void
}

' Clase de Descuento
class Descuento {
    -id: Long
    -descripcion: String
    -porcentaje: double
    +getId(): Long
    +getDescripcion(): String
    +getPorcentaje(): double
}

' Clase Facade (opcional)
class SistemaFacade {
    +realizarCompra(cliente: Cliente, productos: List<Producto>, tipoPago: TipoPago): void
    +agregarProductoAdmin(admin: Administrador, producto: Producto): void
    +eliminarProductoAdmin(admin: Administrador, producto: Producto): void
}

' Relaciones de clases
Cliente --> Pedido
Administrador --> Producto
Pedido --> Producto
Pedido --> Descuento
Pedido --> ContextoPago
ContextoPago --> EstrategiaPago
Pedido --> Observador

' Relación de Cliente y Administrador con SistemaFacade (Facade opcional)
Cliente --> SistemaFacade
Administrador --> SistemaFacade

' Decorator Pattern
Descuento <|-- DescuentoBase
DescuentoBase <|-- DescuentoPorcentajeDecorator
DescuentoBase <|-- DescuentoFijoDecorator

@enduml
